syntax = "proto3";

package broadcast;

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/broadcast";

// BroadcastService provides concurrent broadcasting of user actions
service BroadcastService {
  // BroadcastAction broadcasts a user action to subscribed clients
  rpc BroadcastAction(BroadcastActionRequest) returns (BroadcastActionResponse) {}
  // SubscribeToActions subscribes to receive action broadcasts
  rpc SubscribeToActions(SubscribeRequest) returns (stream ActionSummary) {}
}

// BroadcastActionRequest contains the action to broadcast
message BroadcastActionRequest {
  string user_id = 1;
  string action_type = 2;
  string application_id = 3;
  map<string, string> metadata = 4;
}

// BroadcastActionResponse contains the broadcast result
message BroadcastActionResponse {
  bool success = 1;
  string message = 2;
}

// SubscribeRequest contains subscription parameters
message SubscribeRequest {
  string application_id = 1;
  repeated string action_types = 2;
}

// ActionSummary contains a summary of user actions
message ActionSummary {
  string user_id = 1;
  string action_type = 2;
  string application_id = 3;
  map<string, string> metadata = 4;
  int64 timestamp = 5;
} 